@@ -24,6 +24,7 @@
 
 #include <sys/io.h>
 #include <string.h>
+#include <stdlib.h>
 #include <errno.h>
 
 #include "output.h"
